theme with udpaw here with froem

--- a/sections/contact-form-w.liquid
+++ b/sections/contact-form-w.liquid
@@ -353,20 +353,71 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="fielda">
+                      <h6>What is your primary business activity?</h6>
                       <select id="request-type" name="contact[business info]">
-                        <option>Returns</option>
-                        <option>Shipping</option>
-                        <option>Custom order</option>
-                        <option>Other</option>
+                        <option value="">Please Select One
+                      </option>
+                      
+                      <option value="Branded Apparel">Branded Apparel
+                      </option>
+                      
+                      <option value="E-Commerce">E-Commerce
+                      </option>
+                      
+                      <option value="Embroiderer">Embroiderer
+                      </option>
+                      
+                      <option value="Manufacturer">Manufacturer
+                      </option>
+                      
+                      <option value="Promotional Products Distribut">Promotional Products Distribut
+                      </option>
+                      
+                      <option value="Screen printer">Screen printer
+                      </option>
                       </select>
                   </div> 
               </div>
               <div class="col-md-6">
                     <div class="fielda">
+                      <h6>Number of outside sales reps: </h6>
                       <select id="request-type" name="contact[outside sales]">
-                        <option>10</option>
-                        <option>20</option>
-                        <option>50+</option>
+                         
+                                <option value="None">None
+                              </option>
+                              
+                              <option value="1">1
+                              </option>
+                              
+                              <option value="2">2
+                              </option>
+                              
+                              <option value="3">3
+                              </option>
+                              
+                              <option value="4">4
+                              </option>
+                              
+                              <option value="5">5
+                              </option>
+                              
+                              <option value="6-10">6-10
+                              </option>
+                              
+                              <option value="11-20">11-20
+                              </option>
+                              
+                              <option value="21-30">21-30
+                              </option>
+                              
+                              <option value="31-40">31-40
+                              </option>
+                              
+                              <option value="41-50">41-50
+                              </option>
+                              
+                              <option value="51+">51+
+                              </option>
                         
                       </select>
                 </div> 
@@ -387,8 +438,8 @@
               
                 <div class="row">
                   <div class="col-12">
-                    <h3>WEB ACCOUNT INFORMATION</h3>
-                    <p> An account will be created with the login ID using the Direct Email Address.</p>
+                    <h3>CONTACT INFORMATION</h3>
+                   
                   </div>
                 </div>
             
@@ -455,7 +506,14 @@
             {% comment %} end  {% endcomment %}
 
             <div class="account-information">
-              <h3>CONTACT INFORMATION</h3>
+
+              <div class="row">
+                <div class="col-12">
+                  <h3>WEB ACCOUNT INFORMATION</h3>
+                   <p>An account will be created with the login ID using the Direct Email Address. </p>
+                </div>
+              </div>
+              
            
               <div class="col-md-6">
                 <div class="field">
