--- a/sections/contact-form-w.liquid
+++ b/sections/contact-form-w.liquid
@@ -45,7 +45,11 @@
              {% comment %} start  {% endcomment %}
             
           <div class="company-details">
-           
+            <div class="row">
+              <div class="col-12">
+                <h3>COMPANY INFORMATION</h3>
+              </div>
+            </div>
                <div class="row">
                
                 <div class="col-md-6">
@@ -343,89 +347,7 @@
 
 
 
-          {% comment %} start  {% endcomment %}
-         
-          <div class="contact-information">
-           
-              <div class="row">
-                <h3>BUSINESS INFORMATION</h3>
-              </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="fielda">
-                      <h6>What is your primary business activity?</h6>
-                      <select id="request-type" name="contact[business info]">
-                        <option value="">Please Select One
-                      </option>
-                      
-                      <option value="Branded Apparel">Branded Apparel
-                      </option>
-                      
-                      <option value="E-Commerce">E-Commerce
-                      </option>
-                      
-                      <option value="Embroiderer">Embroiderer
-                      </option>
-                      
-                      <option value="Manufacturer">Manufacturer
-                      </option>
-                      
-                      <option value="Promotional Products Distribut">Promotional Products Distribut
-                      </option>
-                      
-                      <option value="Screen printer">Screen printer
-                      </option>
-                      </select>
-                  </div> 
-              </div>
-              <div class="col-md-6">
-                    <div class="fielda">
-                      <h6>Number of outside sales reps: </h6>
-                      <select id="request-type" name="contact[outside sales]">
-                         
-                                <option value="None">None
-                              </option>
-                              
-                              <option value="1">1
-                              </option>
-                              
-                              <option value="2">2
-                              </option>
-                              
-                              <option value="3">3
-                              </option>
-                              
-                              <option value="4">4
-                              </option>
-                              
-                              <option value="5">5
-                              </option>
-                              
-                              <option value="6-10">6-10
-                              </option>
-                              
-                              <option value="11-20">11-20
-                              </option>
-                              
-                              <option value="21-30">21-30
-                              </option>
-                              
-                              <option value="31-40">31-40
-                              </option>
-                              
-                              <option value="41-50">41-50
-                              </option>
-                              
-                              <option value="51+">51+
-                              </option>
-                        
-                      </select>
-                </div> 
-              </div>
-            </div>
- 
-           </div>
-            {% comment %} end  {% endcomment %}
+
             {% comment %} /// {% endcomment %}
             {% comment %} start  {% endcomment %}
            
@@ -504,7 +426,91 @@
             
            
             {% comment %} end  {% endcomment %}
+                     {% comment %} start  {% endcomment %}
+         
+                  <div class="contact-information">
+                  
+                    <div class="row">
+                      <div class="col-12">
+                        <h3>BUSINESS INFORMATION</h3>
+                      </div>
+                    </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="fielda">
+                            <h6>What is your primary business activity?</h6>
+                            <select id="request-type" name="contact[business info]">
+                              <option value="">Please Select One
+                            </option>
+                            
+                            <option value="Branded Apparel">Branded Apparel
+                            </option>
+                            
+                            <option value="E-Commerce">E-Commerce
+                            </option>
+                            
+                            <option value="Embroiderer">Embroiderer
+                            </option>
+                            
+                            <option value="Manufacturer">Manufacturer
+                            </option>
+                            
+                            <option value="Promotional Products Distribut">Promotional Products Distribut
+                            </option>
+                            
+                            <option value="Screen printer">Screen printer
+                            </option>
+                            </select>
+                        </div> 
+                    </div>
+                    <div class="col-md-6">
+                          <div class="fielda">
+                            <h6>Number of outside sales reps: </h6>
+                            <select id="request-type" name="contact[outside sales]">
+                              
+                                      <option value="None">None
+                                    </option>
+                                    
+                                    <option value="1">1
+                                    </option>
+                                    
+                                    <option value="2">2
+                                    </option>
+                                    
+                                    <option value="3">3
+                                    </option>
+                                    
+                                    <option value="4">4
+                                    </option>
+                                    
+                                    <option value="5">5
+                                    </option>
+                                    
+                                    <option value="6-10">6-10
+                                    </option>
+                                    
+                                    <option value="11-20">11-20
+                                    </option>
+                                    
+                                    <option value="21-30">21-30
+                                    </option>
+                                    
+                                    <option value="31-40">31-40
+                                    </option>
+                                    
+                                    <option value="41-50">41-50
+                                    </option>
+                                    
+                                    <option value="51+">51+
+                                    </option>
+                              
+                            </select>
+                      </div> 
+                    </div>
+                  </div>
 
+                </div>
+          {% comment %} end  {% endcomment %}
             <div class="account-information">
 
               <div class="row">
@@ -515,13 +521,13 @@
               </div>
               
            
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="field">
                   <input class="field__input" type="text" id="custom-question" name="contact[password]" required placeholder="Custom Question">
                   <label class="field__label" for="custom-question">*Password:</label>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="field">
                   <input class="field__input" type="text" id="custom-question" name="contact[password 2]" required placeholder="Custom Question">
                   <label class="field__label" for="custom-question">*Confirm Password:</label>
