theme updatw with requsid

--- a/sections/contact-form-w.liquid
+++ b/sections/contact-form-w.liquid
@@ -72,6 +72,7 @@
                     <input
                       autocomplete="email"
                       type="email"
+                      
                       id="Company-email"
                       class="field__input"
                       name="contact[email]"
@@ -107,7 +108,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="field">
-                      <input class="field__input" type="text" id="custom-Address2" name="contact[Address-2]" placeholder="Address 2" required>
+                      <input class="field__input" type="text" id="custom-Address2" name="contact[Address-2]" placeholder="Address 2" >
                       <label class="field__label" for="custom-question">*Address 2:</label>
                     </div>
                   </div>
@@ -394,6 +395,7 @@
                       <input
                         autocomplete="email"
                         type="email"
+                        required
                         id="ContactForm-email"
                         class="field__input"
                         name="contact[email]"
@@ -407,7 +409,7 @@
                         {% endif %}
                         placeholder="{{ 'templates.contact.form.email' | t }}"
                       >
-                      <label class="field__label" for="ContactForm-email">{{ 'templates.contact.form.email' | t }}</label>
+                      <label class="field__label" for="ContactForm-email">*Direct Email Address</label>
                       {%- if form.errors contains 'email' -%}
                         <small class="contact__field-error" id="ContactForm-email-error">
                           <span class="visually-hidden">{{ 'accessibility.error' | t }}</span>
@@ -552,7 +554,7 @@
             {% comment %} end  {% endcomment %}
             {% comment %} start  {% endcomment %}
             <div class="fieldb radio-buttons">
-              <input type="radio" name="contact[Agree statement]" required  value="email" id="contact-method">
+              <input type="radio" name="contact[Agree statement]" required  value="true" id="contact-method">
               <label for="contact-method">{{ section.settings.agree }}</label>
               
              
@@ -622,58 +624,7 @@
       "default": "h1",
       "label": "t:sections.all.heading_size.label"
     },
-    {
-      "type": "select",
-      "id": "color_scheme",
-      "options": [
-        {
-          "value": "accent-1",
-          "label": "t:sections.all.colors.accent_1.label"
-        },
-        {
-          "value": "accent-2",
-          "label": "t:sections.all.colors.accent_2.label"
-        },
-        {
-          "value": "background-1",
-          "label": "t:sections.all.colors.background_1.label"
-        },
-        {
-          "value": "background-2",
-          "label": "t:sections.all.colors.background_2.label"
-        },
-        {
-          "value": "inverse",
-          "label": "t:sections.all.colors.inverse.label"
-        }
-      ],
-      "default": "background-1",
-      "label": "t:sections.all.colors.label"
-    },
-    {
-      "type": "header",
-      "content": "t:sections.all.padding.section_padding_heading"
-    },
-    {
-      "type": "range",
-      "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_top",
-      "default": 36
-    },
-    {
-      "type": "range",
-      "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_bottom",
-      "default": 36
-    },
+
     {
       "type": "text",
       "id": "h3",
