--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -115,7 +115,7 @@
                                 {%- for option in item.options_with_values -%}
                                   <div class="product-option">
                                     <dt>{{ option.name }}: </dt>
-                                    <dd>{{ option.value }}{% unless forloop.last %}, {% endunless %}</dd>
+                                    <dd>{{ option.value | split: "___" | first }}{% unless forloop.last %}, {% endunless %}</dd>
                                   </div>
                                 {%- endfor -%}
                               {%- endif -%}
