--- a/assets/base.css
+++ b/assets/base.css
@@ -2162,8 +2162,8 @@ input[type='checkbox'] {
   position: absolute;
   background-color: rgb(var(--color-button));
   color: rgb(var(--color-button-text));
-  height: 1.7rem;
-  width: 1.7rem;
+  height: auto;
+  width: auto;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -2173,7 +2173,14 @@ input[type='checkbox'] {
   left: 2.2rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
-
+a.button {
+  padding: 13px;
+}
+.header__icon span {
+  height: 100%;
+  display: inline-block;
+  padding: 5px;
+}
 /* section-announcement-bar */
 #shopify-section-announcement-bar {
   z-index: 4;
