--- a/sections/main-productmac.liquid
+++ b/sections/main-productmac.liquid
@@ -1,3 +1,5 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
 <section
   id="MainProduct-{{ section.id }}"
   class="page-width section-{{ section.id }}-padding"
@@ -46,6 +48,14 @@
       onload="this.media='all'"
     >
   {%- endif -%}
+
+  <div id="hello" >
+
+
+    this  is hello div
+  </div> 
+
+
 
   <div class="product product--{{ section.settings.media_size }} product--{{ section.settings.media_position }} product--{{ section.settings.gallery_layout }} product--mobile-{{ section.settings.mobile_thumbnails }} grid grid--1-col {% if product.media.size > 0 %}grid--2-col-tablet{% else %}product--no-media{% endif %}">
     <div class="grid__item product__media-wrapper{% if section.settings.media_position == 'right' %} medium-hide large-up-hide{% endif %}">
@@ -1219,8 +1229,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="d-flex">
-        <div class="allinonarray">
+      <div class="d-flex justify-content-center">
+        <div id="warning">
 
         </div>
       </div>
@@ -1239,6 +1249,7 @@
 
 
 </section>
+
 
 
 <script>
@@ -1295,7 +1306,7 @@ async function getUsers() {
 
 async function renderUsers() {
   let users = await getUsers();
-   console.log(users)
+   {% comment %} console.log(users) {% endcomment %}
 
 // geting the color to check if it contain  that color or size for optio one or option two in jeson data
 let html = '';
@@ -1360,7 +1371,7 @@ if ( users.product.options[1].name === 'Color'){
   users.product.variants.forEach((user,index) => {
     user.inventory_product_count = allavaiableinventory[index];
      
-  console.log(user.enventorycount);
+  {% comment %} console.log(user.enventorycount); {% endcomment %}
     getallColorfromproudct.map(singelcolor =>{
      
       
@@ -1472,7 +1483,7 @@ colorandSizing.forEach((data,index,arr)=>{
 
     
    if(index === 0){
-    console.log(data);
+    {% comment %} console.log(data); {% endcomment %}
  htmlSegment = `
     <div class="row topwrapper d-flex align-items-center">
     <div class="allvarinatcolorname  col-3">
@@ -1561,36 +1572,98 @@ container2.innerHTML = htmla;
 
 
 renderUsers();
-const itemraw = [];
+let itemraw = [];
 async function myFunction(e){
   let newobect = {};
  newobect['id'] = e.getAttribute('data-varnitid');
  newobect['quantity'] = e.value;
  itemraw.push(newobect);
+
 } 
 
+function alertFunc() {
+  itemraw = [];
+}
+
 async function addItem() {
-  
+  timeout = setTimeout(alertFunc, 200);
+  const parser = new DOMParser();
  async function addItem1(itemraw) {
-  console.log(itemraw);
-  const result = await fetch("/cart/add.js", {
+
+  let result = await fetch("/cart/add.js", {
       method: "POST",
       headers: {
           "Content-Type": "application/json",
-          "Accept": "application/json"
+          "Accept": "application/json",
+          'X-Requested-With':  'XMLHttpRequest'
+          
       },
       body: JSON.stringify(
         {
-          items:itemraw
+          items:itemraw,
+          sections: "cart-drawer,cart-icon-bubble"
         }
     )
   })
+  .then((response) => response.json() )
+  .then((response) => {
+  {% comment %} console.log(response); {% endcomment %}
+  if( response.status == 422){
+     const elementoncard = document.getElementById("warning");
+
+     {% comment %} elementoncard.innerHTML = response.description.replace('wholesale','').replace('___','').replace(/[0-9]/g, '');   {% endcomment %}
+     elementoncard.innerHTML = "Some items is already in the cart";  
+  } else{
+          
+    const elementoncard = document.getElementById("warning");
+    elementoncard.innerHTML = "";  
+
+              let section  = response.sections['cart-drawer'];
+              let carticon  = response.sections['cart-icon-bubble']
+            const newdata =   parser.parseFromString(section, 'text/html');
+            const wanted =   newdata.querySelector('#CartDrawer'); 
+
+            const cartdata =   parser.parseFromString(carticon, 'text/html');
+            const carticonh =   cartdata.querySelector('.cart-count-bubble'); 
+
+            {% comment %} console.log(carticonh); {% endcomment %}
+
+            $(function () {
+              $('input').val(''); 
+
+
+              $("body").addClass("overflow-hidden"); 
+              $("cart-drawer").removeClass("is-empty");
+              $("cart-drawer").addClass("drawer animate active"); 
+                html = $($.parseXML(wanted));
+                {% comment %} htmla = $($.parseXML(carticonh)); {% endcomment %}
+                
+                {% comment %} $("head").append(wanted.find("script")); {% endcomment %}
+                $("#CartDrawer").replaceWith(wanted);
+                if ($('#cart-icon-bubble  .cart-count-bubble').length){
+                  $("#cart-icon-bubble  .cart-count-bubble").replaceWith(carticonh);
+                } else{
+                  $("#cart-icon-bubble").append(carticonh);
+                }
+               
+            });
+
+          }
+      });
+     
+
+  
 
 }
 
+const  cart = document.querySelector('cart-notification') || document.querySelector('cart-drawer');
+
 const additemcount = addItem1(itemraw);
-setTimeout( function(){location.replace(`/cart`) },2000);
+
 // ;
+
+
+
 }///async addItem end
 
 
@@ -2378,7 +2451,9 @@ setTimeout( function(){location.replace(`/cart`) },2000);
 
 
 <style>
-
+  div#hello {
+    color: #fff;
+}
   .allvarinatname{
   display:inline-block;
   }
@@ -2400,6 +2475,10 @@ p span{
   color: red;
   padding: 20px;
   font-size: 34px;
+}
+div#warning {
+  font-size: 18px;
+  color: red;
 }
 </style>
 
