--- a/sections/main-productmac.liquid
+++ b/sections/main-productmac.liquid
@@ -330,10 +330,11 @@
               </p>
             {%- when 'title' -%}
               <div class="product__title" {{ block.shopify_attributes }}>
-                <h1><span>{{ product.title | escape }}</span></h1>
+                <h1><span>{{ product.title | split: "wholesale" | last }}</span></h1>
                 <a href="{{ product.url }}" class="product__title">
                   <h2 class="h1">
-                    {{ product.title | escape }}
+                    {{ product.title | split: "wholesale" | last }}
+         
                   </h2>
                 </a>
               </div>
