--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -86,7 +86,7 @@
                             <p class="caption-with-letter-spacing light">{{ item.product.vendor }}</p>
                           {%- endif -%}
 
-                          <a href="{{ item.url }}" class="cart-item__name h4 break">{{ item.product.title | escape }}</a>
+                          <a href="{{ item.url }}" class="cart-item__name h4 break">{{ item.product.title | split: "wholesale" | last  }}</a>
 
                           {%- if item.original_price != item.final_price -%}
                             <div class="cart-item__discounted-prices">
