theme update with details

--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -107,7 +107,7 @@
                   class="full-unstyled-link"
                   aria-labelledby="StandardCardNoMediaLink-{{ section_id }}-{{ card_product.id }} NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
                 >
-                  {{ card_product.title | escape }}
+                  {{ card_product.title | split: "wholesale" | last }}
                 </a>
               </h3>
 
@@ -151,7 +151,7 @@
                 class="full-unstyled-link"
                 aria-labelledby="CardLink-{{ section_id }}-{{ card_product.id }} Badge-{{ section_id }}-{{ card_product.id }}"
               >
-                {{ card_product.title | escape }}
+                {{ card_product.title | split: "wholesale" | last }}
               </a>
             </h3>
            <p class="price-card"> {{ card_product.price | money }}</p>
