slider updatw withd eitls

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1227,7 +1227,18 @@
 </section>
 
 
+<style>
+  .product-form__input input[type=radio]:checked+label {
 
+    border: 2px solid #1947ba;
+}
+  .product-form__input input[type=radio]+label {
+
+    border: 2px solid #ddd;
+    line-height: 42px !important;
+}
+
+</style>
 
 
 
