--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -456,3 +456,18 @@
 
 
 
+<style>
+  .grid--4-col-desktop .grid__item {
+    padding-bottom: 4%;
+}
+
+.card-proudctimage {
+  position: relative;
+  z-index: 10000;
+}
+
+.s-card-color{
+  cursor: pointer;
+}
+
+</style>
