--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -405,6 +405,15 @@
     }
   }
   async function render{{card_product.id}}Usersa(e) {
+
+
+    $(function() {
+      $('.card-proudctimage  .s-card-color').click( function() {
+        $(this).addClass('active').siblings().removeClass('active');
+      });
+    });
+
+
     let users = await getUsers();
     
    
@@ -413,7 +422,7 @@
     if ( users.product.options[0].name != null && users.product.options[0].name === 'Color'){
       users.product.variants.forEach((user,index) => {
       
-        console.log(users.product.options[0].name);
+        {% comment %} console.log(users.product.options[0].name); {% endcomment %}
       });
 
     } else if(users.product.options[1].name != null && users.product.options[1].name === 'Color'){
@@ -431,7 +440,7 @@
          
                if(img.id === user.image_id ){
 
-          console.log(img.src);
+          {% comment %} console.log(img.src); {% endcomment %}
                 myElement.src= img.src
               }
             }) 
@@ -445,7 +454,7 @@
     
     } else if(users.product.options[2].name != null && users.product.options[2].name === 'Color'){
       users.product.variants.forEach((user,index) => {
-    console.log(users.product.options[2].name);
+    {% comment %} console.log(users.product.options[2].name); {% endcomment %}
        
       
       });
@@ -468,6 +477,12 @@
 
 .s-card-color{
   cursor: pointer;
+  border: 1px solid #ddd;
+}
+
+.s-card-color.active{
+
+  border: 1px solid #1947ba;
 }
 
 </style>
