with detials with picture

--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -446,7 +446,7 @@
             }) 
           
           } else{
-          console.log("this is no image")
+          console.log("Image not found")
           }
    
       
