theme push with updatw

--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -115,7 +115,7 @@
                             {%- if forloop.index > 2 -%}
                               {%- assign lazy_load = true -%}
                             {%- endif -%}
-                                  <li class="grid__item">
+                                  <li class="grid__item padding-bottom">
                                     {% render 'card-product',
                                       card_product: product,
                                       media_aspect_ratio: section.settings.image_ratio,
@@ -153,7 +153,7 @@
                                   {%- if forloop.index > 2 -%}
                                     {%- assign lazy_load = true -%}
                                   {%- endif -%}
-                                        <li class="grid__item">
+                                        <li class="grid__item padding-bottom">
                                           {% render 'card-product',
                                             card_product: product,
                                             media_aspect_ratio: section.settings.image_ratio,
