--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -484,13 +484,17 @@
 
 
 <style>
+  .card-information {
+    width: 100%;
+    padding-top: 10px;
+}
  .padding-bottom {
-    padding-bottom: 4%;
+    padding-bottom: 2%;
 }
 
 .card-proudctimage {
   position: relative;
-  z-index: 10000;
+
 }
 
 .s-card-color{
