--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -43,6 +43,7 @@
 .card--card,
 .card--standard .card__inner {
   position: relative;
+  z-index: 10;
   box-sizing: border-box;
   border-radius: var(--border-radius);
   border: var(--border-width) solid rgba(var(--color-foreground), var(--border-opacity));
@@ -230,17 +231,17 @@
   }
 
   .card:hover .media.media--hover-effect > img:first-child:only-child,
-  .card-wrapper:hover .media.media--hover-effect > img:first-child:only-child {
+  .card__inner:hover .media.media--hover-effect > img:first-child:only-child {
     transform: scale(1.03);
   }
 
-  .card-wrapper:hover
+  .card__inner:hover
     .media.media--hover-effect
     > img:first-child:not(:only-child) {
     opacity: 0;
   }
 
-  .card-wrapper:hover .media.media--hover-effect > img + img {
+  .card__inner:hover .media.media--hover-effect > img + img {
     opacity: 1;
     transition: transform var(--duration-long) ease;
     transform: scale(1.03);
